@@ -1,3 +1,7 @@
+2004-11-16  Per Bothner  <per@bothner.com>
+
+	* Interpreter.java (define_field): Remove unused methods.
+
 2004-11-15  Per Bothner  <per@bothner.com>
 
 	* ScopeExp.java (getVarScope): New method. Allocate scope if needed.
